@@ -3817,7 +3817,7 @@ ScheffeTest.aov <- function(x, which=NULL, contrasts = NULL, conf.level=0.95, ..
   attr(out, "conf.level") <- conf.level
   attr(out, "ordered") <- FALSE
   attr(out, "method") <- "Scheffe Test"
-  attr(out, "method.str") <- gettextf("\n  Posthoc multiple comparisons of means : %s \n", attr(out, "method"))
+  attr(out, "method.str") <- gettextf("\n  Posthoc multiple comparisons of means: %s \n", attr(out, "method"))
 
 
   return(out)
