@@ -19,7 +19,9 @@ UPDATED FUNCTIONS:
   * tol in UnirootAll has been substantially reduced as the default was too coarse.
   * Rev() gets a new interface for arrays.
   * ScheffeTest() gets a formula interface.
-  * plot.Desc.numnum can insert a linear model line now.
+  * plot.Desc.numnum can insert a linear model and exponential line now.
+  * SpearmanRho() gets a new algorithm for tables and no longer crudely 
+    inflates a frequency table to single case presentation.
     
 BUGFIXES:
   * PasswordDlg() gets all its required arguments back again.    
